just mongodb stuff

--- a/View/index.ejs
+++ b/View/index.ejs
@@ -1,2 +1,45 @@
-<h1>Hi, there!</h1>
-<h1>Hi, there!</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./Css/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <h1>UrlShortener</h1>
+      <form action="/generate" method="post" class="my-4 form-inline">
+        <label for="rowUrl">Enter Url</label>
+        <input
+          class="form-control mr-2 mb-4"
+          type="text"
+          name="rowUrl"
+          id="rowurl"
+        />
+        <input class="btn btn-success" type="submit" value="Generate" />
+      </form>
+
+      <table class="table table-striped table-responsive">
+        <tr>
+          <th>Row Url</th>
+          <th>Short Url</th>
+        </tr>
+        <tr>
+          <td>
+            <a href="https://mongoosejs.com/docs/index.html"
+              >https://mongoosejs.com/docs/index.html</a
+            >
+          </td>
+          <td><a href="/1213213">1213213</a></td>
+        </tr>
+      </table>
+    </div>
+  </body>
+</html>
