--- a/View/index.ejs
+++ b/View/index.ejs
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>UrlShortener</h1>
+      <h1 class="text-center">URL SHORTNER USING MONGODB AND EXPRESS</h1>
       <form action="/generate" method="post" class="my-4 form-inline">
         <label for="rowUrl">Enter Url</label>
         <input
